Updated Map, Reuse of image and created Concepts
1. Updated Chapter Maps.
2. Added Concepts Enterprise Portal Window and Portal Window Elements
3. Reused three images.
4. updated Properties, Situations Tasks, and via command line Tasks.

--- a/Sridevi-Chapter1/Tasks/T_Installing_the_Installation_Manager_via_Command_Line.dita
+++ b/Sridevi-Chapter1/Tasks/T_Installing_the_Installation_Manager_via_Command_Line.dita
@@ -28,7 +28,7 @@
                 </info>
             </step>
         </steps>
-        <result id="result_cgj_wjh_wxb">You should a get similar
+        <result id="result_cgj_wjh_wxb">You should get a similar
             result.<codeblock id="codeblock_z3d_yjh_wxb">tdisrv_silent must be 4 characters or less.
 A service already exists with that name or the name is invalid. 
 UNIX based platforms, maximum 4 characters name is valid.</codeblock></result>
