--- a/Abrar-Chapter2/Tasks/T_finding_navigator_items.dita
+++ b/Abrar-Chapter2/Tasks/T_finding_navigator_items.dita
@@ -17,6 +17,11 @@
         </metadata>
     </prolog>
     <taskbody>
+        <prereq id="prereq_fyx_f1k_wxb">
+            <note
+                conref="../../Lisa-Chapter3/Tasks/T_refreshing_a_workspace.dita#t_refreshing_a_workspace/note_kvg_bzf_wxb"
+                id="note_mby_r1k_wxb"/>
+        </prereq>
         <context>
             <p>Take these steps to find a Navigator item:</p>
         </context>
